--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "tesuji-react",
   "version": "0.0.0",
   "dependencies": {
-    "react": "^0.10.0"
+    "react": "^0.10.0",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
     "envify": "^1.2.1",
