--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
-    "jest-cli": "^0.1.11",
+    "jest-cli": "^0.1.12",
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.0"
   },
   "engines": {
     "node": ">=0.8.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
