--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "devDependencies": {
     "chai": "^1.9.1",
     "envify": "^1.2.1",
-    "expect.js": "^0.3.1",
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "~0.5.0",
     "grunt-bower-install": "~0.7.0",
     "grunt-browserify": "^2.1.0",
@@ -26,15 +25,19 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.2",
     "grunt-mocha": "~0.4.0",
+    "grunt-mocha-test": "^0.10.2",
     "grunt-modernizr": "~0.4.0",
     "grunt-newer": "~0.6.0",
     "grunt-react": "^0.8.2",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
-    "jest-cli": "^0.1.12",
     "jshint-stylish": "~0.1.3",
+    "karma": "^0.12.16",
+    "karma-mocha": "^0.1.3",
     "load-grunt-tasks": "~0.2.0",
+    "mocha": "^1.19.0",
+    "reactify": "^0.13.1",
     "time-grunt": "~0.2.0"
   },
   "engines": {
