--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-newer": "~0.6.0",
     "grunt-react": "^0.8.2",
     "grunt-rev": "~0.1.0",
+    "grunt-sass": "^0.13.1",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
