--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma": "^0.12.16",
     "karma-mocha": "^0.1.3",
     "load-grunt-tasks": "~0.2.0",
+    "lz-string": "^1.3.3",
     "mocha": "^1.19.0",
     "reactify": "^0.13.1",
     "time-grunt": "~0.2.0"
