--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lz-string": "^1.3.3",
     "mocha": "^1.19.0",
     "reactify": "^0.13.1",
+    "sjcl": "^1.0.1",
     "time-grunt": "~0.2.0"
   },
   "engines": {
